Fix `search-editor-opener` alignment
refs #238

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -139,8 +139,11 @@ div.show-more {
   .control-button {
     margin-left: .5em;
 
-    &.continue-with {
-      margin-right: -.5em;
+    &.continue-with,
+    &.search-editor-opener {
+      &:last-child {
+        margin-right: -.5em;
+      }
     }
   }
 
